--- a/tutorial_point_prompt_seg.ipynb
+++ b/tutorial_point_prompt_seg.ipynb
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load pre-trained model"
+    "## Load trained model"
    ]
   },
   {
@@ -187,10 +187,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ai_sam_ckpt_path = \"medsam_point_prompt_flare22.pth\"\n",
+    "ai_sam_ckpt_path = \"./weights/AI-SAM-acdc-vit_h-20231029-1700-105/autosam_model_latest.pth\"\n",
     "device = \"cuda:0\"\n",
-    "ai_sam_model = sam_model_registry['vit_b'](checkpoint=ai_sam_ckpt_path)\n",
+    "ai_sam_model = sam_model_registry['vit_h'](checkpoint=None)\n",
+    "checkpoint = torch.load(ai_sam_ckpt_path, map_location=device)\n",
+    "ai_sam_model.load_state_dict(checkpoint[\"model\"],strict=False)\n",
     "ai_sam_model = ai_sam_model.to(device)\n",
+    "\n",
     "ai_sam_model.eval()\n",
     "point_prompt_demo = PointPromptDemo(ai_sam_model)"
    ]
@@ -240,10 +243,10 @@
     "# load demo img data\n",
     "demo_file_png = \"./assets/acdc_case_002_volume_ED_1_img.png\"\n",
     "demo_file_png = cv2.imread(demo_file_png, cv2.IMREAD_COLOR)\n",
-    "demo_file_png = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "demo_file_png = cv2.cvtColor(demo_file_png, cv2.COLOR_BGR2RGB)\n",
     "plt.imshow(demo_file_png, cmap='gray')\n",
     "plt.show()\n",
-    "plt.title('middle slice:'+str(image_slice_id))"
+    "plt.title(demo_file_png)"
    ]
   },
   {
@@ -292,7 +295,7 @@
     }
    ],
    "source": [
-    "point_prompt_demo.set_image(np.rot90(image_slice,2))\n",
+    "point_prompt_demo.set_image(np.rot90(demo_file_png,2))\n",
     "point_prompt_demo.show()"
    ]
   },
